methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:3: error: not found: value poseBrosse
  poseBrosse();leveBrosse();
  ^PictureMono1:5: error: not found: value poseBrosse
  poseBrosse();leveBrosse();
  ^PictureMono1:7: error: not found: value poseBrosse
  poseBrosse();leveBrosse();
  ^