methods.picture.PictureMono1.scala.code
def faireV() {
  avance();avance();
  poseBrosse();leveBrosse();
  gauche();avance();droite();avance();
  poseBrosse();leveBrosse();
  droite();avance();gauche();avance();
  poseBrosse();leveBrosse();
}



override def run() {
}